objects/vlocity_ins__String__c.object
<CustomObject>
    <description>This object stores string that need to translate.</description>
    <fields>
        <fullName>vlocity_ins__BaseStringHash__c</fullName>
        <description>MD5 Hash of Base String</description>
        <externalId>true</externalId>
        <label>Base String Hash</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BaseString__c</fullName>
        <description>This field keeps string that need to be translated.</description>
        <label>Base String</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Domain__c</fullName>
        <description>This field indicates type of strings.</description>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityTranslationDomain</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Vlocity String</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Base String Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Strings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>